--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html lang="en">
+    <!--  Character set, viewport settings, style sheets and title are located in the head tag -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,13 +9,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-
     <title>Weather Dashboard</title>
 </head>
+
 <body>
+     <!-- Header - Heading Located Here -->
     <header class = "bg-dark text-white text-center p-3">
         <h1>Weather Dashboard</h1>
     </header>
+    <!-- Input, Buttons and Weather Info is Located Here -->
     <main class="container-fluid">
         <div class = "row">
             <div class="col-12 col-md-3 p-2 search-box">
@@ -38,7 +42,7 @@
             </div>
         </div>
     </main>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
+    <!-- Script source codes goes in Here-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="./assets/script.js"></script>
