"Js file fixed according to acceptance criteria. Also Css file is updated."

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class = "row">
             <div class="col-12 col-md-3 p-2 search-box">
                 <form class = "form-control border p-2 d-grid gap-2" id = "city-search-form">
-                    <h2>Search for a City</h2>
+                    <h2>Search for a City:</h2>
                     <input class="input-group mb-3 form-control"id="city" type = "text" autofocus = "true" class = "form-input"/>
                     <button class = "btn btn-primary" type = "submit">Search</button>
                 </form>
-                <div class = "past-search border" id = "past-search-buttons"></div>
+                <div class = "past-search " id = "past-search-buttons"></div>
             </div>
             <div class="col-12 col-md-9 ">
                 <div class = "row border selected-city" id = "current-forecast">
